<?xml version="1.0"?>
<package format="2">
  <name>motorFailure</name>
  <version>0.1.2</version>
  <description> Environment to critical reactions
  </description>
  <maintainer email="iagosilvestre2004@gmail.com">Iago Silvestre</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/world_models:${prefix}/models" />
  </export>
</package>
